# MinesweeperSolver

./: .gitignore  CMakeLists.txt  README.md  Solver.sln  dokumentáció.tex  tests.csv  window.h
Installer/: Installer.aip  Installer.aiproj  Installer.back(21.6.1) (1).aip  Installer.back(21.6.1).aip
dependencies/: README.md
game/: Beg 0,42 - ápr 18 2024 08.44.47 PM.mvr  Beg 0,48 - ápr 18 2024 08.44.22 PM.mvr  Beg 0,56 - ápr 18 2024 08.43.39 PM.mvr  Exp 20,97 - ápr 16 2024 09.45.41 PM.mvr  Exp 23,58 - ápr 18 2024 08.38.03 PM.mvr  Exp 39,74 - ápr 16 2024 09.53.29 PM.mvr  Int 3,26 - ápr 17 2024 08.14.45 PM.mvr  Int 3,41 - ápr 18 2024 08.59.04 PM.mvr  Int 3,86 - ápr 18 2024 08.55.04 PM.mvr  Int 4,66 - ápr 18 2024 08.51.44 PM.mvr  Int 5,28 - ápr 18 2024 08.49.06 PM.mvr
include/: buttonHandler.h  clicker.h  constraint.h  constraintGroup.h  constraintGroupSolver.h  constraintMaker.h  difficulty.h  executionMemory.h  fileWriter.h  guiData.h  mineProbability.h  minefieldMemory.h  resource.h  screenReader.h  solution.h  solutionMatrix.h  window.h
src/: CMakeLists.txt  buttonHandler.cpp  clicker.cpp  constraint.cpp  constraintGroup.cpp  constraintGroupSolver.cpp  constraintMaker.cpp  difficulty.cpp  equation.cpp  equation.h  equationSystem.cpp  equationSystem.h  fileWriter.cpp  guiData.cpp  main.cpp  mineProbability.cpp  minefieldMemory.cpp  minesweeperHandle.cpp  minesweeperHandle.h  screenReader.cpp  solution.cpp  solutionMatrix.cpp  window.cpp  window.h
test/: CMakeLists.txt  equationTest.cpp  windowTest.cpp
tests/: constraintGroupSolverTest.cpp  constraintGroupTest.cpp  constraintMakerTest.cpp  constraintTest.cpp  difficultyTest.cpp  mineProbabilityTest.cpp  minefieldMemoryTest.cpp  screenReaderTest.cpp  solutionMatrixTest.cpp  solutionTest.cpp
tools/: build_script.ps1  extract_dependencies.ps1
website/: index.php
(+6 files in other folders)
